manifests/apps/archery-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archery-tracker-fe-only
  namespace: archery-tracker-fe-only
  labels:
    app: archery-tracker-fe-only
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archery-tracker-fe-only
  template:
    metadata:
      labels:
        app: archery-tracker-fe-only
    spec:
      containers:
        - name: archery-tracker-fe-only
          image: ghcr.io/jeammm/archery-frontend:0.1
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
