manifests/apps/archery-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: archery-tracker
  namespace: archery-tracker
  labels:
    app: archery-tracker
spec:
  selector:
    app: archery-tracker
  ports:
    - port: 80
      targetPort: 80
      name: http
