manifests/apps/archery-tracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archery-tracker
  namespace: archery-tracker
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: archery.jeammm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archery-tracker
                port:
                  number: 80
